Fixed-alignment of footer's text

--- a/src/component/footer/footer.scss
+++ b/src/component/footer/footer.scss
@@ -9,7 +9,7 @@
     margin-top: 25px;
 }
 .footer-txt{
-    margin-left: 9%;
+    margin-left: 9.8%;
     height: 13px;
     padding-top:10px;
     text-align: left;
